--- a/running-information-analysis-service/pom.xml
+++ b/running-information-analysis-service/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>lombok</artifactId>
             <version>1.16.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
